--- a/Index.html
+++ b/Index.html
@@ -5,25 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Maximum Reality: Cyber Alley</title>
     <style>
-        body { 
-            margin: 0; background: #000; overflow: hidden; font-family: 'Courier New', Courier, monospace;
-            position: fixed; width: 100%; height: 100%;
-            -webkit-user-select: none; user-select: none; -webkit-tap-highlight-color: transparent;
-        }
-        #gameCanvas { display: block; width: 100vw; height: 100vh; image-rendering: pixelated; touch-action: none; }
-        .ui-layer {
-            position: absolute; top: 0; width: 100%; text-align: center;
-            color: #0ff; text-shadow: 0 0 10px #0ff; pointer-events: none;
-            padding-top: env(safe-area-inset-top); z-index: 5;
-        }
-        #recentMenu { margin-top: 10px; display: flex; justify-content: center; gap: 10px; height: 40px; }
-        #recentMenu img { width: 40px; height: 40px; background: rgba(0,255,255,0.1); border-radius: 5px; border: 1px solid #0ff; }
-        .crt-overlay {
-            position: fixed; top: 0; left: 0; width: 100vw; height: 100vh;
-            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), 
-                        linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03));
-            background-size: 100% 4px, 3px 100%; pointer-events: none; z-index: 10;
-        }
+        :root {
+    --neon-pink: #ff00ff;
+    --neon-cyan: #00ffff;
+}
+body {
+    margin: 0;
+    background: #0a0a0a;
+    color: var(--neon-cyan);
+    font-family: 'Courier New', monospace;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    /* Stops iPhone double-tap to zoom */
+    touch-action: manipulation; 
+    -webkit-user-select: none; /* Prevents text selection popups */
+}
+
+/* Removed CRT Overlay for a crisp look */
+
+#game-container {
+    position: relative;
+    border: 2px solid var(--neon-pink);
+    box-shadow: 0 0 15px var(--neon-pink);
+    padding: 5px;
+    background: #000;
+}
+#smokin-cat {
+    position: absolute;
+    bottom: -10px;
+    right: -60px;
+    width: 80px;
+    z-index: 5;
+    filter: drop-shadow(0 0 5px var(--neon-pink));
+}
+canvas {
+    display: block;
+    background: #111;
+    /* Extra insurance against iOS gestures */
+    touch-action: none; 
+}
+#ui-layer {
+    text-align: center;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+.status-msg { font-size: 0.8rem; color: #ff0000; height: 1.2rem; }
+#reset-btn {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 20;
+    padding: 15px;
+    background: rgba(0,0,0,0.9);
+    border: 2px solid var(--neon-cyan);
+    color: var(--neon-cyan);
+    font-family: 'Courier New';
+    display: none;
+    cursor: pointer;
+}
+
     </style>
 </head>
 <body>
