--- a/legacy.html
+++ b/legacy.html
@@ -16,7 +16,18 @@
         #recentMenu { margin-top: 50px; display: flex; gap: 10px; height: 40px; }
         #recentMenu img { width: 40px; height: 40px; background: rgba(0,255,255,0.1); border-radius: 5px; border: 1px solid #0ff; }
         .game-controls { position: absolute; top: 60px; right: 20px; display: flex; gap: 15px; z-index: 100; }
-        .game-controls button { background: rgba(0, 255, 255, 0.05); border: 1px solid rgba(0, 255, 255, 0.3); color: #0ff; padding: 5px 10px; border-radius: 3px; cursor: pointer; pointer-events: auto; }
+        .game-controls button { 
+    background: rgba(0, 255, 255, 0.05); 
+    border: 1px solid rgba(0, 255, 255, 0.5); 
+    color: #0ff; 
+    padding: 8px 12px; 
+    border-radius: 5px; 
+    backdrop-filter: blur(4px); 
+    box-shadow: 0 0 10px rgba(0, 255, 255, 0.2);
+    cursor: pointer; 
+    pointer-events: auto; 
+}
+
         .crt-overlay { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%), linear-gradient(90deg, rgba(255, 0, 0, 0.03), rgba(0, 255, 0, 0.01), rgba(0, 0, 255, 0.03)); background-size: 100% 4px, 3px 100%; pointer-events: none; z-index: 10; }
     </style>
 </head>
